src/objects/State__c.object
<CustomObject>
    <fields>
        <fullName>Call_End_Time__c</fullName>
        <label>Calling End Time</label>
        <required>true</required>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Call_Start_Time__c</fullName>
        <label>Calling Start Time</label>
        <required>true</required>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>State_Abbreviation__c</fullName>
        <label>State Code</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State_Abbreviation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Name__c</fullName>
        <label>State Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Zone_Offset__c</fullName>
        <description>Time Zone Offset from pacific</description>
        <label>Time Zone Offset</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>State</label>
    <nameField>
        <label>State Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>States</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>